# aoc2021

./: .gitignore  Cargo.toml
res/: d22_very_small.txt  d23_test.txt
src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  graph.rs  grid.rs  lib.rs  main.rs
tests/: all_puzzles.rs
