[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
indexmap = "1.7.0"
itertools = "0.10.3"
num = "0.4.0"
owo-colors = "3.1.1"
structopt = "0.3.25"
thiserror = "1.0.30"

[dev-dependencies]
paste = "1.0.6"
