[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.51"
bitvec = "0.22.3"
derive_more = "0.99.17"
indexmap = "1.7.0"
itertools = "0.10.3"
nalgebra = "0.29.0"
nom = "7.1.0"
num = "0.4.0"
owo-colors = "3.1.1"
regex = "1.5.4"
structopt = "0.3.25"
strum = "0.23.0"
strum_macros = "0.23.1"
thiserror = "1.0.30"

[dev-dependencies]
paste = "1.0.6"
